refactor: tests refactor and swager changes